<resources>
    <string name="app_name">PC_2</string>
    <string name="app_title_enter">Войти</string>
    <string name="app_title_miss_password">Логин и/или пароль неверный</string>
    <string name="app_title_save_password">Сохранить пароль</string>
    <string name="app_title_password">Пароль</string>
    <string name="app_title_login">Логин</string>
    <string name="app_title_notifications">Заявки</string>
    <string name="app_title_news">Новости</string>
    <string name="app_title_kiosk_main">Мониторинг терминалов</string>
    <string name="app_title_blocked_transactions">Мошеннические операции</string>
</resources>
