<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_KioskMain"
        android:enabled="true"
        android:icon="@drawable/ic_kiosk_main"
        android:title="@string/app_title_kiosk_main"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_NewsMain"
        android:enabled="true"
        android:icon="@drawable/ic_news_main"
        android:title="@string/app_title_news"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_NotificationsMain"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_main"
        android:title="@string/app_title_notifications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_BlockedTransactions"
        android:enabled="true"
        android:icon="@drawable/ic_blocked_transactions"
        android:title="@string/app_title_blocked_transactions"
        app:showAsAction="ifRoom" />

</menu>